(lang dune 3.4)

(name jolly)

(generate_opam_files true)

(using menhir 2.1)

(source
 (github username/reponame))

(authors "Sean Brynjólfsson")

(maintainers "Sean Brynjólfsson")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name jolly)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
